--- a/reacttest/src/Components/SignUp/styles/screenOne.scss
+++ b/reacttest/src/Components/SignUp/styles/screenOne.scss
@@ -1,3 +1,32 @@
-* {
-  background-color: aquamarine;
+.screenOne {
+  text-align: center;
+  padding: 2em;
+}
+.inputData {
+  width: 306px;
+  height: 45px;
+  background: #fcfcfc;
+  /* text/500 */
+  border: 1px solid #bebec2;
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 16px 20px;
+}
+.ButtonChecked {
+  border: 1px solid #bebec2 !important;
+  border-radius: 10px;
+  color: black;
+  padding: 6px 12px;
+}
+
+.changedInput {
+  border: 2px solid #885fff;
+  outline: none;
+}
+
+.changedInputButton {
+  background-color: #885fff !important;
+}
+.Popo {
+  background-color: #000000;
 }
